# OGRePy

./: .gitignore  CHANGELOG.md  CITATION.bib  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: OGRePyLive.yml
JupyterLite/: jupyter-lite.json  overrides.json
JupyterLite/api/contents/: all.json
JupyterLite/api/translations/: all.json  en.json
JupyterLite/extensions/jupyterlab-jupytext/: package.json
JupyterLite/extensions/jupyterlab-jupytext/static/: 509.5a03966e9e40908cdb52.js  remoteEntry.c9b453deb22b48d355e2.js
JupyterLite/files/: OGRePy_Documentation.html  OGRePy_Documentation.ipynb  OGRePy_Live.ipynb
JupyterLite/pypi/: all.json  ogrepy-1.3.1-py3-none-any.whl
OGRePy/: __init__.py  _core.py  abc.py
OGRePy/docs/: OGRePy_Documentation.html  OGRePy_Documentation.ipynb
docs/: OGRePy_Documentation.ipynb
tasks/: build_jupyterlite.ps1  cleanup.ps1  cleanup.py  compile_docs.ps1  compile_docs.py  update_packages.ps1  update_packages.py
